--- a/package.json
+++ b/package.json
@@ -93,7 +93,9 @@
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "isomorphic-unfetch": "^4.0.2",
-    "tslib": "^2.8.0"
+    "log4js": "^6.9.1",
+    "tslib": "^2.8.0",
+    "yaml": "^2.6.0"
   },
   "pnpm": {
     "overrides": {
