--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "CaoMeiYouRen",
   "private": true,
   "license": "MIT",
-  "main": "dist/index.cjs",
+  "main": "dist/index.mjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
@@ -28,7 +28,7 @@
     "build": "cross-env NODE_ENV=production tsup",
     "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
     "dev:tsup": "cross-env NODE_ENV=development tsup --watch",
-    "start": "node ./dist/index",
+    "start": "node ./dist/index.mjs",
     "start:tsx": "cross-env NODE_ENV=production tsx src/index.ts",
     "commit": "cz",
     "prepare": "husky install"
