--- a/cookie-map.yml
+++ b/cookie-map.yml
@@ -3,6 +3,7 @@
 # 如果不指定，则默认名称为 域名大写 + _COOKIES
 # 域名大写不包含后缀，如 bilibili.com 则为 BILIBILI_COOKIES
 cookieMap:
-  BILIBILI_COOKIES: "bilibili.com"
+  BILIBILI_COOKIES_114514: "bilibili.com"
   WEIBO_COOKIES: "weibo.cn"
   ZHIHU_COOKIES: "zhihu.com"
+  TWITTER_AUTH_TOKEN: "x.com"
